    - Vietnamese added by Clytie Siddall. Closes: #428789
    - German added by Helge Kreutzmann. Closes: #428912
    - Spanish added by Javier Fernández-Sanguino Peña. Closes: #429000
    - Malayalam added by Praveen. Closes: #429369
    - Korean added by Sunjae Park. Closes: #430753
    - French added by Steve Petruzzello.
    - Russian added by Yuri Kozlov. Closes: #431245
  * su-to-root: fix missing quote in printf arguments.

 -- Bill Allombert <ballombe@debian.org>  Wed, 13 Jun 2007 11:02:35 +0200

menu (2.1.34) unstable; urgency=low

  * The "black arrow" release.
  * Apply patch from Martin Michlmayr to fix compilation with GCC 4.3.
    Closes: #417431.
  * su-to-root:
    - tighten the script. Closes: #416302.
    - add support for SU_TO_ROOT_SU=sudo. Closes: #410875
    - l10n support. Closes: #383321. Thanks Michelle Konzack.
    - support for a /etc/su-to-rootrc config file.
  * Menu translations
    - Marathi added by Priti Patil. Closes: #416797
    - Punjabi added by Amanpreet Singh Alam. Closes: #427300
  * Programs translations
    - Spanish updated by Javier Fernández-Sanguino Peña. Closes: #423277

 -- Bill Allombert <ballombe@debian.org>  Wed,  6 Jun 2007 20:09:59 +0200

menu (2.1.33) unstable; urgency=low

  * The "and justice for all" release.
  * Apply patch from Tim Dijkstra to simplify wait_dpkg() to not require
    signal to be sent between the parent and the child to work around a
    race condition in glibc, probably bug #223110. Closes: #374834.
  * Menu translations
    - Portuguese updated by Miguel Figueiredo. Closes: #399241
    - Malayalam added by Praveen. Closes: #402016
    - Tamil added by Tirumurti Vasudevan.

 -- Bill Allombert <ballombe@debian.org>  Fri, 22 Dec 2006 15:20:52 +0100

menu (2.1.32) unstable; urgency=medium

  * The "maintainer on strike" release
  * Medium urgency for i18n only upload.
  * This release was prepared by Christian Perrier.
  * Menu translations
    - Bengali added by Jamil Ahmed